# esp32-home-sensor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cfg.toml  docker-compose.yaml  espflash.toml  partitions.csv  rust-toolchain.toml
.cargo/: config.toml
docs/: home-assistant.md  ota-firmware-upgrade.md  tls-mtls.md
infra/: influx-dashboard.json  influxdb.env  mosquitto.conf  telegraf-config.toml  telegraf-init.sh  telegraf.env  weather_insights.json
src/: bme280.rs  config.rs  constants.rs  cstr.rs  firmware_update.rs  main.rs  measurement.rs  mqtt.rs  ota.rs  scd30.rs  sds011.rs  semver.rs  sensor.rs  transport.rs  wifi.rs
src/sensors/: bme280.rs  mod.rs  scd30.rs  sds011.rs
