[package]
name = "esp32_home_sensor"
version = "0.1.1"
authors = ["Etienne Tremel <995474+etiennetremel@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

[dependencies]
sds011-nostd-rs = "0.3.0"
bme280-rs = "0.3.0"
libscd = { version = "0.5.0", features = ["scd30", "async", "defmt"] }

embassy-embedded-hal = "0.3.0"
embassy-executor = { version = "0.7.0", features = [
  "executor-thread",
  "task-arena-size-16384",
] }
embassy-net = { version = "0.6.0", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "dhcpv4-hostname",
  "dns",
  "medium-ethernet",
] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }

embedded-io-async = "0.6.1"
embedded-hal-async = "1.0.0"

esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32", "unstable"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
esp-mbedtls = { ref = "03458c34e6c5cd8578010bb4429dc362b9358185", git = "https://github.com/esp-rs/esp-mbedtls", features = [
  "esp32",
] }
esp-println = { version = "0.13.1", features = ["esp32", "log"] }
esp-wifi = { version = "0.13.0", default-features = false, features = [
  "esp32",
  "wifi",
  "esp-alloc",
  "builtin-scheduler",
] }
esp-hal-ota = { version = "0.4.0", features = ["esp32", "log"] }
esp-storage = { version = "0.5.0", features = ["esp32"] }

heapless = { version = "0.8.0", default-features = false }
log = "0.4.27"
rust-mqtt = { version = "0.3.0", default-features = false, features = ["tls"] }
static_cell = { version = "2.1.0", features = ["nightly"] }

[build-dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = "s"

[profile.dev.package.esp-hal]
debug-assertions = false
opt-level = 3

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev.package.xtensa-lx-rt]
opt-level = 'z'

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release.package.esp-storage]
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
opt-level = "s"
lto = 'fat'
overflow-checks = false

[features]
default = ["influx", "tls", "mtls", "ota"]

# Dataformat
influx = []
json = []

# Sensors
bme280 = []
scd30 = []
sds011 = []

# TLS
mtls = []
tls = []

# OTA automatic firmware update
ota = []
