[package]
name = "esp32_home_sensor"
version = "0.1.2"
authors = ["Etienne Tremel <995474+etiennetremel@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

[dependencies]
sds011-nostd-rs = "0.3.0"
bme280-rs = "0.3.0"
libscd = { version = "0.5.1", features = ["scd30", "async", "defmt"] }

embassy-embedded-hal = "0.3.0"
embassy-executor = { version = "0.7.0", features = [
  "executor-thread",
  "task-arena-size-24576",
] }
embassy-net = { version = "0.7.0", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "dhcpv4-hostname",
  "dns",
  "medium-ethernet",
] }
embassy-sync = "0.7.0"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }

embedded-io-async = "0.6.1"
embedded-hal-async = "1.0.0"

esp-alloc = "0.8.0"
esp-backtrace = { version = "0.16.0", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "1.0.0-beta.1", features = ["esp32", "unstable"] }
esp-hal-embassy = { version = "0.8.0", features = ["esp32"] }
esp-mbedtls = { ref = "03458c34e6c5cd8578010bb4429dc362b9358185", git = "https://github.com/esp-rs/esp-mbedtls", features = [
  "esp32",
] }
esp-println = { version = "0.14.0", features = ["esp32", "log-04"] }
esp-wifi = { version = "0.14.0", default-features = false, features = [
  "esp32",
  "wifi",
  "esp-alloc",
  "builtin-scheduler",
] }
esp-hal-ota = { version = "0.4.1", features = ["esp32", "log"] }
esp-storage = { version = "0.6.0", features = ["esp32"] }

heapless = { version = "0.8.0", default-features = false }
log = "0.4.27"
rust-mqtt = { version = "0.3.0", default-features = false, features = ["tls"] }
static_cell = { version = "2.1.0", features = ["nightly"] }

[patch.crates-io]
embassy-embedded-hal = { ref = "5e49985ed678659e199c58c8100e3ed18d2f6227", git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { ref = "5e49985ed678659e199c58c8100e3ed18d2f6227", git = "https://github.com/embassy-rs/embassy" }
embassy-time = { ref = "5e49985ed678659e199c58c8100e3ed18d2f6227", git = "https://github.com/embassy-rs/embassy" }
embassy-time-driver = { ref = "5e49985ed678659e199c58c8100e3ed18d2f6227", git = "https://github.com/embassy-rs/embassy" }
embassy-time-queue-utils = { ref = "5e49985ed678659e199c58c8100e3ed18d2f6227", git = "https://github.com/embassy-rs/embassy" }

[build-dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = "s"

[profile.dev.package.esp-hal]
debug-assertions = false
opt-level = 3

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev.package.xtensa-lx-rt]
opt-level = 'z'

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release.package.esp-storage]
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
opt-level = "s"
lto = 'fat'
overflow-checks = false

[features]
default = ["influx", "tls", "mtls", "ota"]

# Dataformat
influx = []
json = []

# Sensors
bme280 = []
scd30 = []
sds011 = []

# TLS
mtls = []
tls = []

# OTA automatic firmware update
ota = []
