[package]
name = "esp32_home_sensor"
version = "0.1.3"
authors = ["Etienne Tremel <995474+etiennetremel@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

[dependencies]
sds011-nostd-rs = "0.3.0"
bme280-rs = "0.3.0"
libscd = { version = "0.5.1", features = ["scd30", "async", "defmt"] }

embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.1", features = ["executor-thread"] }
embassy-net = { version = "0.7.1", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "dhcpv4-hostname",
  "dns",
  "medium-ethernet",
] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["generic-queue-8"] }

embedded-storage = "0.3.1"
embedded-io-async = "0.6.1"
embedded-hal-async = "1.0.0"

esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-hal = { version = "1.0.0", features = ["esp32", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
esp-radio = { version = "0.17.0", default-features = false, features = [
  "esp32",
  "wifi",
  "esp-alloc",
  "log-04",
  "unstable",
] }
esp-rtos = { version = "0.2.0", features = [
  "esp-radio",
  "embassy",
  "log-04",
  "esp32",
] }
esp-storage = { version = "0.8.1", features = ["esp32"] }

embedded-tls = { git = "https://github.com/drogue-iot/embedded-tls", branch = "main", default-features = false, features = [
  "log",
  "alloc",
] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }

heapless = { version = "0.8", default-features = false }
log = "0.4.28"
rust-mqtt = { version = "0.3.0", default-features = false, features = ["tls"] }
static_cell = { version = "2.1.1", features = ["nightly"] }

[build-dependencies]
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = "s"

[profile.dev.package.esp-hal]
debug-assertions = false
opt-level = 3

[profile.dev.package.esp-radio]
opt-level = 1

[profile.dev.package.esp-rtos]
opt-level = 1

[profile.dev.package.xtensa-lx-rt]
opt-level = 'z'

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release.package.esp-storage]
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
opt-level = "s"
lto = 'fat'
overflow-checks = false

[features]
default = ["influx", "tls", "mtls", "ota"]

# Dataformat
influx = []
json = []

# Sensors
bme280 = []
scd30 = []
sds011 = []

# TLS
mtls = []
tls = []

# OTA automatic firmware update
ota = []
